--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/firebase": "^7.5.0",
+    "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.8.3",
     "firebase": "^8.3.0",
     "nuxt": "^2.14.12"
